k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rentsathi-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: rentsathi
  template:
    metadata:
      labels:
        app: rentsathi
    spec:
      containers:
      - name: rentsathi-container
        image: your-dockerhub-username/rentsathi-app:latest
        ports:
        - containerPort: 8080
