k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: rentsathi-service
spec:
  selector:
    app: rentsathi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30002
  type: NodePort  # Use LoadBalancer for external access or NodePort for local clusters
